Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 2.5.0
============================

2023-00-00 Jose Kahan
	* src/setup.c
	Marked config options linkquotes as "deprecated, with intention to
	remove" ddue to corresponding code not being maintained anymore.

	* src/lock.c
	unlock_archive() wasn't removing the lockfile

	* src/string.c
	fixed a memory leak after calling obfuscated_email_address()

2022-10-26 Jose Kahan
	* src/getname.c
	Remove a potential writing out of bonds issue

2022-04-07 Jose Kahan
	* src/parse.c
	When parsing a mailbox, the code for skipping MIME epilogues wasn't
	detecting the start of the next message. Thanks to James Riordon and
	Christof Meerwald for reporting and pointing out where the issue was
	(closes #82).

2022-04-04 Jose Kahan
	* src/string.c
	We're now using iconv's transliteration flag when converting a string
	from UTF-8 to another charset, From the man page: "this means that when
	a character cannot be represented in the target character set, it can
	be approximated through one or several similarly looking characters."

2022-04-01 Jose Kahan
	* src/string.c src/utf8.h
	Integrated utf8.h to provide validation of UTF-8 strings

	When i18n_convstring is called to convert from UTF-8 to UTF-8, we
	skip the convertion, but we now replace invalid UTF-8 characters
	with a '?' character.

2022-03-30 Jose Kahan
	* src/parse.c
 	The demimed flag was not being updated when decoding RFC2047 lines

	* src/hypermail.h
	Increase NAMESTRLEN from 80 to 320 to take into account that a single
	UTF-8 character may be encoded in up to four bytes.

	* src/string.c src/parse.c src/proto.h
	If a header value is not using RFC2047, make sure its value consists
	of only US-ASCII printable character plus newline.

2022-01-15 Christof Meerwald
	* src/print.c
	Fixed a format string issue leading to a segfault or worse (fixes #81)

2021-11-17 David Hughes
	* docs/hmrc.html src/parse.c